--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 
 
 
-
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Lola Labi</a>.
   </div>
+   </footer>
 </body>
 </html>
